--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                     <input type="password" id="password" name="password" required>
                 </div>
                 <button type="submit" class="submit-btn">Login</button>
+                <div id="login-error" class="error-message" style="display: none;"></div>
             </form>
         </div>
     </div>
