--- a/index.html
+++ b/index.html
@@ -3,112 +3,202 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Our Website</title>
+    <title>Welcome to Our Website - Training Site</title>
+    <meta name="description" content="A training website demonstrating accessibility features and best practices">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Skip to main content link for screen readers -->
+    <a href="#main-content" class="skip-link">Skip to main content</a>
+
     <!-- Hero Banner -->
-    <header class="hero">
+    <header class="hero" role="banner" aria-label="Site header">
         <div class="hero-content">
-            <img src="images/HeaderImage.png" alt="Hero Banner Image" class="hero-image">
+            <img src="images/HeaderImage.png" alt="Training website header image showing learning and development concepts" class="hero-image">
         </div>
     </header>
 
+
+
     <!-- Main Content Sections -->
-    <main class="main-content">
+    <main id="main-content" class="main-content" role="main">
+        <h2 class="visually-hidden">Main content sections</h2>
         <div class="sections-container">
             <!-- Login Section -->
-            <section class="section-card" id="login-section">
-                <div class="section-icon">🔐</div>
-                <h2>Login</h2>
+            <section class="section-card" id="login-section" aria-labelledby="login-heading">
+                <div class="section-icon" aria-hidden="true">🔐</div>
+                <h2 id="login-heading">Login</h2>
                 <p>Access your account and manage your profile</p>
-                <button class="section-button" onclick="openLogin()">Login</button>
+                <button class="section-button" onclick="openLogin()" id="loginButton" aria-describedby="login-description">
+                    Login
+                    <span class="visually-hidden"> - Opens login form modal</span>
+                </button>
+                <p id="login-description" class="visually-hidden">Click to open the login form where you can enter your username and password</p>
             </section>
 
             <!-- Contact Form Section -->
-            <section class="section-card" id="contact-section">
-                <div class="section-icon">📧</div>
-                <h2>Contact Us</h2>
+            <section class="section-card" id="contact-section" aria-labelledby="contact-heading">
+                <div class="section-icon" aria-hidden="true">📧</div>
+                <h2 id="contact-heading">Contact Us</h2>
                 <p>Get in touch with our team for support</p>
-                <button class="section-button" onclick="openContact()">Contact</button>
+                <button class="section-button" onclick="openContact()" id="contactButton" aria-describedby="contact-description">
+                    Contact
+                    <span class="visually-hidden"> - Opens contact form modal</span>
+                </button>
+                <p id="contact-description" class="visually-hidden">Click to open the contact form where you can send us a message</p>
             </section>
 
             <!-- Accessibility Section -->
-            <section class="section-card" id="accessibility-section">
-                <div class="section-icon">♿</div>
-                <h2>Accessibility</h2>
+            <section class="section-card" id="accessibility-section" aria-labelledby="accessibility-heading">
+                <div class="section-icon" aria-hidden="true">♿</div>
+                <h2 id="accessibility-heading">Accessibility</h2>
                 <p>Learn about our accessibility features</p>
-                <button class="section-button" onclick="openAccessibility()">Learn More</button>
+                <a href="accessibility-issues.html" class="section-button" id="accessibilityButton" aria-describedby="accessibility-description">
+                    Learn More
+                    <span class="visually-hidden"> - Navigates to accessibility issues page</span>
+                </a>
+                <p id="accessibility-description" class="visually-hidden">Click to learn about the accessibility features available on this website</p>
             </section>
         </div>
     </main>
 
+
+
+
+
     <!-- Modal for Login -->
-    <div id="login-modal" class="modal">
+    <div id="login-modal" class="modal" role="dialog" aria-labelledby="login-modal-heading" aria-describedby="login-modal-description" aria-hidden="true">
         <div class="modal-content">
-            <span class="close" onclick="closeModal('login-modal')">&times;</span>
-            <h2>Login</h2>
-            <form class="form">
+            <div class="modal-header">
+                <h2 id="login-modal-heading">Login to Your Account</h2>
+                <button type="button" class="close" onclick="closeModal('login-modal')" aria-label="Close login form">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <p id="login-modal-description" class="visually-hidden">Enter your username and password to access your account</p>
+            <form class="form" role="form" aria-labelledby="login-modal-heading">
                 <div class="form-group">
-                    <label for="username">Username:</label>
-                    <input type="text" id="username" name="username" required>
+                    <label for="username" id="username-label">Username:</label>
+                    <input type="text" id="username" name="username" required 
+                           aria-required="true" 
+                           aria-describedby="username-error"
+                           aria-invalid="false">
+                    <div id="username-error" class="field-error" role="alert" aria-live="polite"></div>
                 </div>
                 <div class="form-group">
-                    <label for="password">Password:</label>
-                    <input type="password" id="password" name="password" required>
+                    <label for="password" id="password-label">Password:</label>
+                    <input type="password" id="password" name="password" required 
+                           aria-required="true" 
+                           aria-describedby="password-error"
+                           aria-invalid="false">
+                    <div id="password-error" class="field-error" role="alert" aria-live="polite"></div>
                 </div>
-                <button type="submit" class="submit-btn">Login</button>
-                <div id="login-error" class="error-message" style="display: none;"></div>
+                <button type="submit" class="submit-btn" id="submitButton" aria-describedby="submit-description">
+                    Login
+                    <span class="visually-hidden"> to your account</span>
+                </button>
+                <p id="submit-description" class="visually-hidden">Click to submit your login credentials</p>
+                <div id="error" class="error-message" role="alert" aria-live="assertive" style="display: none;"></div>
+                <div id="success" class="success-message" role="status" aria-live="polite" style="display: none;"></div>
             </form>
         </div>
     </div>
 
     <!-- Modal for Contact -->
-    <div id="contact-modal" class="modal">
+    <div id="contact-modal" class="modal" role="dialog" aria-labelledby="contact-modal-heading" aria-describedby="contact-modal-description" aria-hidden="true">
         <div class="modal-content">
-            <span class="close" onclick="closeModal('contact-modal')">&times;</span>
-            <h2>Contact Us</h2>
-            <form class="form">
+            <div class="modal-header">
+                <h2 id="contact-modal-heading">Contact Us</h2>
+                <button type="button" class="close" onclick="closeModal('contact-modal')" aria-label="Close contact form">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <p id="contact-modal-description" class="visually-hidden">Send us a message and we'll get back to you as soon as possible</p>
+            <form class="form" role="form" aria-labelledby="contact-modal-heading">
                 <div class="form-group">
-                    <label for="name">Name:</label>
-                    <input type="text" id="name" name="name" required>
+                    <label for="name" id="name-label">Full Name:</label>
+                    <input type="text" id="name" name="name" required 
+                           aria-required="true" 
+                           aria-describedby="name-error"
+                           aria-invalid="false">
+                    <div id="name-error" class="field-error" role="alert" aria-live="polite"></div>
                 </div>
                 <div class="form-group">
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required>
+                    <label for="email" id="email-label">Email Address:</label>
+                    <input type="email" id="email" name="email" required 
+                           aria-required="true" 
+                           aria-describedby="email-error"
+                           aria-invalid="false">
+                    <div id="email-error" class="field-error" role="alert" aria-live="polite"></div>
                 </div>
                 <div class="form-group">
-                    <label for="message">Message:</label>
-                    <textarea id="message" name="message" rows="4" required></textarea>
+                    <label for="message" id="message-label">Message:</label>
+                    <textarea id="message" name="message" rows="4" required 
+                              aria-required="true" 
+                              aria-describedby="message-error"
+                              aria-invalid="false"></textarea>
+                    <div id="message-error" class="field-error" role="alert" aria-live="polite"></div>
                 </div>
-                <button type="submit" class="submit-btn">Send Message</button>
+                <button type="submit" class="submit-btn" id="submitContactForm" aria-describedby="contact-submit-description">
+                    Send Message
+                    <span class="visually-hidden"> to our support team</span>
+                </button>
+                <p id="contact-submit-description" class="visually-hidden">Click to send your message</p>
             </form>
         </div>
     </div>
 
     <!-- Modal for Accessibility -->
-    <div id="accessibility-modal" class="modal">
+    <div id="accessibility-modal" class="modal" role="dialog" aria-labelledby="accessibility-modal-heading" aria-describedby="accessibility-modal-description" aria-hidden="true">
         <div class="modal-content">
-            <span class="close" onclick="closeModal('accessibility-modal')">&times;</span>
-            <h2>Accessibility Features</h2>
+            <div class="modal-header">
+                <h2 id="accessibility-modal-heading">Accessibility Features</h2>
+                <button type="button" class="close" onclick="closeModal('accessibility-modal')" aria-label="Close accessibility information">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
             <div class="accessibility-content">
                 <h3>Our Commitment to Accessibility</h3>
-                <p>We believe the web should be accessible to everyone. Here are some features we've implemented:</p>
-                <ul>
+                <p id="accessibility-modal-description">We believe the web should be accessible to everyone. Here are some features we've implemented:</p>
+                <ul role="list">
                     <li>High contrast text and backgrounds</li>
                     <li>Keyboard navigation support</li>
                     <li>Screen reader compatibility</li>
                     <li>Resizable text options</li>
                     <li>Alt text for all images</li>
+                    <li>Proper heading structure</li>
+                    <li>ARIA labels and roles</li>
+                    <li>Focus management</li>
+                    <li>Color contrast compliance</li>
                 </ul>
-                <div class="accessibility-controls">
-                    <button onclick="increaseFontSize()">Increase Font Size</button>
-                    <button onclick="decreaseFontSize()">Decrease Font Size</button>
-                    <button onclick="toggleHighContrast()">Toggle High Contrast</button>
+                <div class="accessibility-controls" role="group" aria-labelledby="accessibility-controls-heading">
+                    <h4 id="accessibility-controls-heading" class="visually-hidden">Accessibility controls</h4>
+                    <button onclick="increaseFontSize()" aria-describedby="font-size-status">
+                        Increase Font Size
+                        <span class="visually-hidden"> - Makes text larger for better readability</span>
+                    </button>
+                    <button onclick="decreaseFontSize()" aria-describedby="font-size-status">
+                        Decrease Font Size
+                        <span class="visually-hidden"> - Makes text smaller</span>
+                    </button>
+                    <button onclick="toggleHighContrast()" aria-describedby="contrast-status">
+                        Toggle High Contrast
+                        <span class="visually-hidden"> - Switches between normal and high contrast modes</span>
+                    </button>
                 </div>
+                <div id="font-size-status" class="accessibility-status" role="status" aria-live="polite"></div>
+                <div id="contrast-status" class="accessibility-status" role="status" aria-live="polite"></div>
             </div>
         </div>
     </div>
+
+    <!-- Footer -->
+    <footer role="contentinfo" aria-label="Site footer">
+        <div class="footer-content">
+            <p>&copy; 2024 Training Website. All rights reserved.</p>
+            <p>This website is designed to be fully accessible and compliant with WCAG 2.1 AA standards.</p>
+        </div>
+    </footer>
 
     <script src="script.js"></script>
 </body>
