Updated functionality and a11y

--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
                 <p id="contact-description" class="visually-hidden">Click to open the contact form where you can send us a message</p>
             </section>
 
-            <!-- Accessibility Section -->
-            <section class="section-card" id="accessibility-section" aria-labelledby="accessibility-heading">
-                <div class="section-icon" aria-hidden="true">♿</div>
-                <h2 id="accessibility-heading">Accessibility</h2>
-                <p>Learn about our accessibility features</p>
-                <a href="accessibility-issues.html" class="section-button" id="accessibilityButton" aria-describedby="accessibility-description">
-                    Learn More
-                    <span class="visually-hidden"> - Navigates to accessibility issues page</span>
-                </a>
-                <p id="accessibility-description" class="visually-hidden">Click to learn about the accessibility features available on this website</p>
+            <!-- Products Section -->
+            <section class="section-card" id="products-section" aria-labelledby="products-heading">
+                <div class="section-icon" aria-hidden="true">🛍️</div>
+                <h2 id="products-heading">Products</h2>
+                <p>Browse our collection of amazing products</p>
+                                   <a href="products.html" class="section-button" id="productsButton" aria-describedby="products-description">
+                       Products
+                       <span class="visually-hidden"> - Navigates to products page</span>
+                   </a>
+                <p id="products-description" class="visually-hidden">Click to view our collection of products with images, names, and prices</p>
             </section>
         </div>
     </main>
@@ -195,7 +195,7 @@
     <!-- Footer -->
     <footer role="contentinfo" aria-label="Site footer">
         <div class="footer-content">
-            <p>&copy; 2024 Training Website. All rights reserved.</p>
+            <p>&copy; 2025 Training Website. All rights reserved.</p>
             <p>This website is designed to be fully accessible and compliant with WCAG 2.1 AA standards.</p>
         </div>
     </footer>
