--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Our Website - Training Site</title>
-    <meta name="description" content="A training website demonstrating accessibility features and best practices">
+    <title>BrowserStack Training Site 2025</title>
+    <meta name="description" content="BrowserStack Training Site 2025. A training website demonstrating accessibility features and best practices">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
