--- a/index.html
+++ b/index.html
@@ -114,36 +114,36 @@
                 </button>
             </div>
             <p id="contact-modal-description" class="visually-hidden">Send us a message and we'll get back to you as soon as possible</p>
-            <form class="form" role="form" aria-labelledby="contact-modal-heading">
+            <form class="form" role="form" aria-labelledby="contact-modal-heading" novalidate>
                 <div class="form-group">
                     <label for="name" id="name-label">Full Name:</label>
-                    <input type="text" id="name" name="name" required 
+                    <input type="text" id="name" name="name" 
                            aria-required="true" 
-                           aria-describedby="name-error"
+                           aria-describedby="contact-error"
                            aria-invalid="false">
-                    <div id="name-error" class="field-error" role="alert" aria-live="polite"></div>
                 </div>
                 <div class="form-group">
                     <label for="email" id="email-label">Email Address:</label>
-                    <input type="email" id="email" name="email" required 
+                    <input type="email" id="email" name="email" 
                            aria-required="true" 
                            aria-describedby="email-error"
                            aria-invalid="false">
-                    <div id="email-error" class="field-error" role="alert" aria-live="polite"></div>
+                    <div id="email-error" class="field-error" role="alert" aria-live="polite" style="display: none;"></div>
                 </div>
                 <div class="form-group">
                     <label for="message" id="message-label">Message:</label>
-                    <textarea id="message" name="message" rows="4" required 
+                    <textarea id="message" name="message" rows="4" 
                               aria-required="true" 
-                              aria-describedby="message-error"
+                              aria-describedby="contact-error"
                               aria-invalid="false"></textarea>
-                    <div id="message-error" class="field-error" role="alert" aria-live="polite"></div>
                 </div>
                 <button type="submit" class="submit-btn" id="submitContactForm" aria-describedby="contact-submit-description">
                     Send Message
                     <span class="visually-hidden"> to our support team</span>
                 </button>
                 <p id="contact-submit-description" class="visually-hidden">Click to send your message</p>
+                <div id="contact-error" class="error-message" role="alert" aria-live="assertive" style="display: none;"></div>
+                <div id="contact-success" class="success-message" role="status" aria-live="polite" style="display: none;"></div>
             </form>
         </div>
     </div>
