--- a/products.html
+++ b/products.html
@@ -305,7 +305,7 @@
     <header class="products-header" role="banner" aria-label="Products page header">
         <h1>Our Products</h1>
         <p>Discover amazing products for every need</p>
-        <button class="cart-header-btn" onclick="openCartModal()" aria-describedby="cart-header-description">
+        <button class="cart-header-btn" id="view-cart-button" onclick="openCartModal()" aria-describedby="cart-header-description">
             🛒 View Cart (<span id="cart-count">0</span>)
         </button>
         <p id="cart-header-description" class="visually-hidden">Click to view your shopping cart</p>
