--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div id="login-modal" class="modal" role="dialog" aria-labelledby="login-modal-heading" aria-describedby="login-modal-description" aria-hidden="true">
         <div class="modal-content">
             <div class="modal-header">
-                <h2 id="login-modal-heading">Login to Your Account</h2>
+                <h2 id="login-modal-heading">Login</h2>
                 <button type="button" class="close" onclick="closeModal('login-modal')" aria-label="Close login form">
                     <span aria-hidden="true">&times;</span>
                 </button>
