--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                            aria-invalid="false">
                     <div id="password-error" class="field-error" role="alert" aria-live="polite"></div>
                 </div>
-                <button type="submit" class="submit-btn" id="submitButton-wrong" aria-describedby="submit-description">
+                <button type="submit" class="submit-btn" id="submitButton" aria-describedby="submit-description">
                     Login
                     <span class="visually-hidden"> to your account</span>
                 </button>
